ci/cd: add existing version check to deployment workflow
- 배포 워크플로에 기존 버전 확인 추가
- 배포.zip 파일이 존재하면 이용하여 배포
- 코드 변경사항은 녹색 환경이 건강해질 때까지 기다림

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
           environment_name: AkatsukiFE-green-env
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
+          use_existing_version_if_available: true
 
       - name: Wait for Green environment to be healthy
         run: |
