--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.1",
+    "axios": "^1.7.2",
     "express": "^4.19.2",
     "gh-pages": "^6.1.1",
     "github-label-sync": "^2.3.1",
+    "jwt-decode": "^4.0.0",
     "sweetalert2": "^11.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
