build: Update deploy.yml and npm.config
- "deploy.yml"와 "npm.config"을 업데이트
- 이전 "deploy.yml"과 "npm.config"을 업데이트

--- a/.ebextensions/01_npm.config
+++ b/.ebextensions/01_npm.config
@@ -1,7 +1,7 @@
 commands:
   01_npm_install:
-    cwd: "/var/app/staging"
-    command: "npm install"
+    cwd: "/var/app/current"
+    command: "npm install && ls node_modules"
   02_npm_build:
-    cwd: "/var/app/staging"
+    cwd: "/var/app/current"
     command: "npm run build"
