ci/cd: Add production environment variable to the build process
- "빌드 프로세스에 프로덕션 환경 변수 추가"
- "이미 존재하는 빌드 프로세스에 프로덕션 환경 변수를 추가합니다."

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,12 @@ jobs:
         run: ls -la node_modules
 
       - name: Build
-        run: npm run build
+        run: |
+          echo "Starting build process..."
+          npm run build
+        env:
+          # 필요한 환경 변수를 여기에 추가합니다.
+          NODE_ENV: production
 
       - name: Zip Artifacts
         run: zip -r deploy.zip dist server.js package.json Procfile
