build: Add printenv step to deploy workflow
- 배포 워크플로에 printenv 단계 추가
- 환경 변수 출력을 위한 단계를 워크플로에 추가함.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: List node_modules
         run: ls -la node_modules
 
+      - name: Print environment variables
+        run: printenv
+
       - name: Build
         run: |
           echo "Starting build process..."
