ci/cd: Added ability to serve static files and return index.html on every request
- Vue3 애플리케이션이 빌드된 dist 디렉토리에서 정적 파일을 제공합니다.
- 모든 요청에 대해 index.html을 반환하도록 설정했습니다.

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -1,68 +1,8 @@
 files:
-  "/etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf":
-    mode: "000644"
+  "/opt/elasticbeanstalk/hooks/appdeploy/pre/00_make_files.sh":
+    mode: "000755"
     owner: root
     group: root
     content: |
-      client_max_body_size 20M;
-      upstream express {
-        server 127.0.0.1:8080;
-        keepalive 256;
-      }
-
-      server {
-        listen 8080;
-
-        gzip on;
-        gzip_comp_level 4;
-        gzip_types text/html text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-        location / {
-          proxy_pass  http://express;
-          proxy_set_header Connection "";
-          proxy_http_version 1.1;
-          proxy_set_header   Host             $host;
-          proxy_set_header   X-Real-IP        $remote_addr;
-          proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-          proxy_set_header   X-Forwarded-Proto $scheme;
-        }
-
-        location /public {
-          alias /var/app/current/public;
-          expires max;
-          add_header Cache-Control public;
-        }
-
-        location /socket.io/ {
-          proxy_pass http://express;
-          proxy_http_version 1.1;
-          proxy_set_header Upgrade $http_upgrade;
-          proxy_set_header Connection "Upgrade";
-        }
-
-        location /robots.txt {
-          alias /var/app/current/robots.txt;
-        }
-      }
-
-  "/etc/systemd/system/web.service":
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
-      [Unit]
-      Description=Web Service
-      After=network.target
-
-      [Service]
-      ExecStart=/usr/bin/node /var/app/current/server.js
-      Restart=always
-      RestartSec=10
-      Environment=NODE_ENV=production
-      WorkingDirectory=/var/app/current
-      StandardOutput=syslog
-      StandardError=syslog
-      SyslogIdentifier=web
-
-      [Install]
-      WantedBy=multi-user.target
+      #!/bin/bash
+      echo "Creating necessary files..."
