--- a/.ebextensions/01_npm.config
+++ b/.ebextensions/01_npm.config
@@ -1,7 +1,4 @@
-commands:
+container_commands:
   01_npm_install:
-    cwd: "/var/app/current"
-    command: "npm install && ls node_modules"
-  02_npm_build:
-    cwd: "/var/app/current"
-    command: "npm run build"
+    command: "npm install"
+    leader_only: true
