--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,50 @@ jobs:
           echo "Starting build process..."
           npm run build
         env:
-          # 필요한 환경 변수를 여기에 추가합니다.
           NODE_ENV: production
 
-      - name: Zip Artifacts
-        run: zip -r deploy.zip dist server.js package.json Procfile
+      - name: Prepare deployment package
+        run: |
+          mkdir -p .ebextensions
+          echo "container_commands:
+            01_npm_install:
+              command: 'npm install'
+            02_npm_build:
+              command: 'npm run build'
+          files:
+            \"/etc/nginx/conf.d/proxy.conf\":
+              mode: \"000644\"
+              owner: root
+              group: root
+              content: |
+                server {
+                  listen 80;
+                  server_name localhost;
+
+                  access_log /var/log/nginx/access.log;
+                  error_log /var/log/nginx/error.log;
+
+                  location / {
+                    proxy_pass http://localhost:8080;
+                    proxy_http_version 1.1;
+                    proxy_set_header Upgrade \$http_upgrade;
+                    proxy_set_header Connection 'upgrade';
+                    proxy_set_header Host \$host;
+                    proxy_cache_bypass \$http_upgrade;
+                  }
+
+                  location /static/ {
+                    alias /usr/share/nginx/html/static/;
+                  }
+
+                  error_page 500 502 503 504 /50x.html;
+                  location = /50x.html {
+                    root /usr/share/nginx/html;
+                  }
+                }
+          " > .ebextensions/nginx.conf
+
+          zip -r deploy.zip dist server.js package.json Procfile .ebextensions
 
       - name: Install AWS CLI
         run: |
@@ -56,7 +95,8 @@ jobs:
       - name: Deploy to Elastic Beanstalk
         run: |
           eb init AkatsukiFE --platform node.js --region ap-northeast-2
-          eb deploy AkatsukiFE-env
+          eb use AkatsukiFE-env
+          eb deploy
 
       - name: Check Environment Health
         run: |
