--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -2,12 +2,11 @@ server {
     listen 80;
     server_name localhost;
 
-    # 접근 로그와 에러 로그 파일
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
     location / {
-        proxy_pass http://localhost:8080;  # Express 서버로 요청 전달
+        proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -15,12 +14,10 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # 정적 파일 제공
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
 
-    # 오류 페이지 설정
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
