build: Change the 'dist' folder to be served as a static file
- 'dist' 폴더를 정적 파일로 제공합니다.
- 모든 요청에 대해 'index.html'을 제공합니다.
- Nginx 설정 파일을 수정하여 'dist' 폴더를 정적 파일로 제공합니다.
- Nginx를 다시 불러오는 커맨드를 추가합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,9 @@ jobs:
                     root /usr/share/nginx/html;
                   }
                 }
+          container_commands:
+            01_reload_nginx:
+              command: "ln -sfn /etc/nginx/conf.d/myapp.conf /etc/nginx/sites-enabled/myapp && nginx -s reload"
           EOF
 
           zip -r deploy.zip dist server.js package.json Procfile .ebextensions .platform
