--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,39 +33,39 @@ jobs:
           mkdir -p .ebextensions
           cat <<EOF > .ebextensions/nginx.config
           files:
-            "/etc/nginx/conf.d/myapp.conf":
+            "/etc/nginx/sites-available/myapp":
               mode: "000644"
               owner: root
               group: root
               content: |
                 server {
-                  listen 80;
-                  server_name localhost;
+                    listen 80;
+                    server_name localhost;
 
-                  access_log /var/log/nginx/access.log;
-                  error_log /var/log/nginx/error.log;
+                    access_log /var/log/nginx/access.log;
+                    error_log /var/log/nginx/error.log;
 
-                  location / {
-                    proxy_pass http://localhost:8080;
-                    proxy_http_version 1.1;
-                    proxy_set_header Upgrade \$http_upgrade;
-                    proxy_set_header Connection 'upgrade';
-                    proxy_set_header Host \$host;
-                    proxy_cache_bypass \$http_upgrade;
-                  }
+                    location / {
+                        proxy_pass http://localhost:8080;
+                        proxy_http_version 1.1;
+                        proxy_set_header Upgrade \$http_upgrade;
+                        proxy_set_header Connection 'upgrade';
+                        proxy_set_header Host \$host;
+                        proxy_cache_bypass \$http_upgrade;
+                    }
 
-                  location /static/ {
-                    alias /usr/share/nginx/html/static/;
-                  }
+                    location /static/ {
+                        alias /usr/share/nginx/html/static/;
+                    }
 
-                  error_page 500 502 503 504 /50x.html;
-                  location = /50x.html {
-                    root /usr/share/nginx/html;
-                  }
+                    error_page 500 502 503 504 /50x.html;
+                    location = /50x.html {
+                        root /usr/share/nginx/html;
+                    }
                 }
           container_commands:
             01_reload_nginx:
-              command: "ln -sfn /etc/nginx/conf.d/myapp.conf /etc/nginx/sites-enabled/myapp && nginx -s reload"
+              command: "ln -sfn /etc/nginx/sites-available/myapp /etc/nginx/sites-enabled/myapp && nginx -s reload"
           EOF
           zip -r deploy.zip dist server.js package.json Procfile .ebextensions .platform
 
