--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -1,34 +1,21 @@
 files:
-  "/etc/nginx/sites-available/myapp":
-    mode: "000644"
+  "/etc/nginx/conf.d/vueapp.conf":
+    mode: "000755"
     owner: root
     group: root
     content: |
       server {
-          listen 80;
-          server_name localhost;
-
-          access_log /var/log/nginx/access.log;
-          error_log /var/log/nginx/error.log;
+          listen        80;
+          server_name   _;
 
           location / {
-              proxy_pass http://localhost:8080;
-              proxy_http_version 1.1;
-              proxy_set_header Upgrade $http_upgrade;
-              proxy_set_header Connection 'upgrade';
-              proxy_set_header Host $host;
-              proxy_cache_bypass $http_upgrade;
+              root   /var/app/current/dist;
+              index  index.html index.htm;
+              try_files $uri $uri/ /index.html;
           }
 
-          location /static/ {
-              alias /usr/share/nginx/html/static/;
-          }
-
-          error_page 500 502 503 504 /50x.html;
+          error_page  500 502 503 504  /50x.html;
           location = /50x.html {
-              root /usr/share/nginx/html;
+              root   /usr/share/nginx/html;
           }
       }
-container_commands:
-  01_reload_nginx:
-    command: "ln -sfn /etc/nginx/sites-available/myapp /etc/nginx/sites-enabled/myapp && nginx -s reload"
