--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -1,25 +1,52 @@
-server {
-    listen 80;
-    server_name localhost;
+user                    nginx;
+error_log               /var/log/nginx/error.log warn;
+pid                     /var/run/nginx.pid;
+worker_processes        auto;
+worker_rlimit_nofile    33282;
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+events {
+    use epoll;
+    worker_connections  1024;
+    multi_accept on;
+}
 
-    location / {
-        proxy_pass http://localhost:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location /static/ {
-        alias /usr/share/nginx/html/static/;
-    }
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    include       /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen 80 default_server;
+        server_name _;
+
+        location / {
+            root   /var/app/current/dist;
+            index  index.html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        error_page 404 /404.html;
+        location = /40x.html {
+            root /usr/share/nginx/html;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+
+        access_log  /var/log/nginx/access.log  main;
+        client_header_timeout 60;
+        client_body_timeout   60;
+        keepalive_timeout     60;
+        gzip                  on;
+        gzip_comp_level       4;
+
+        include conf.d/elasticbeanstalk/healthd.conf;
     }
 }
