build: Update Elastic Beanstalk configuration in deploy.yml
- .github/workflows/deploy.yml 파일에서 Elastic Beanstalk 구성 업데이트
- 'Node.js 20 running on 64bit Amazon Linux 2023 v6.1.5'로 설정 초기화
- 'AkatsukiFE'로 Elastic Beanstalk 초기화 및 'AkatsukiFE-env' 생성
- Elastic Beanstalk 구성 업데이트 및 배포 설정 변경
- 기존 설정 변경으로 Elastic Beanstalk 배포 문제 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,9 +80,13 @@ jobs:
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
           aws configure set default.region ap-northeast-2
 
+      - name: Initialize Elastic Beanstalk
+        run: |
+          eb init -p "Node.js 20 running on 64bit Amazon Linux 2023 v6.1.5" AkatsukiFE --region ap-northeast-2
+          eb create AkatsukiFE-env --platform "Node.js 20 running on 64bit Amazon Linux 2023 v6.1.5" --region ap-northeast-2
+
       - name: Deploy to Elastic Beanstalk
         run: |
-          eb init AkatsukiFE --platform "Node.js 20 running on 64bit Amazon Linux 2023/6.1.5" --region ap-northeast-2
           eb use AkatsukiFE-env
           eb deploy
 
