--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,8 +82,11 @@ jobs:
 
       - name: Initialize Elastic Beanstalk
         run: |
-          eb init -p "Node.js 20 running on 64bit Amazon Linux 2023 v6.1.5" AkatsukiFE --region ap-northeast-2
-          eb create AkatsukiFE-env --platform "Node.js 20 running on 64bit Amazon Linux 2023 v6.1.5" --region ap-northeast-2
+          eb init -p "Node.js 20 running on 64bit Amazon Linux 2/3.4.13" AkatsukiFE --region ap-northeast-2
+
+      - name: Create Environment
+        run: |
+          eb create AkatsukiFE-env --platform "Node.js 20 running on 64bit Amazon Linux 2/3.4.13" --region ap-northeast-2
 
       - name: Deploy to Elastic Beanstalk
         run: |
