ci/cd: Deploy to AWS Elastic Beanstalk
- 리포지토리: /Users/duck/Desktop/Workspace/PIOMS/piomsfe
- 변경 사항: 배포 설정을 AWS Elastic Beanstalk으로 변경
- 영향 받은 파일: .github/workflows/deploy.yml
- 배포 과정 단순화 및 안정성 강화를 목적으로 설정 변경
- GitHub Actions를 이용한 배포 자동화 구성 수정
- AWS CLI 및 AWS 액세스 키 설정 추가
- 배포 패키지 생성 및 배포 스크립트 업데이트
- Elastic Beanstalk 배포를 위한 환경 설정 추가
- Beanstalk Deploy 액션을 사용하여 배포 프로세

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
-name: Deploy to AWS Elastic Beanstalk
+name: AkatsukiFE
 
 on:
   push:
     branches:
       - main
+      - develop
 
 jobs:
   deploy:
